# opinionforge-ai

./: .gitignore  CHANGELOG.md  README-full.md  README-full.txt  README.md  pyproject.toml  pytest.ini
docs/: MODES.md  PRD.md  index.html  terms.html
opinionforge/: __init__.py  __main__.py  cli.py  config.py
opinionforge/core/: __init__.py  generator.py  image_prompt.py  length.py  mode_engine.py  preview.py  research.py  similarity.py  stance.py  topic.py
opinionforge/data/: structural_fingerprints.yaml  suppressed_phrases.yaml
opinionforge/exporters/: __init__.py  base.py  medium.py  substack.py  twitter.py  wordpress.py
opinionforge/models/: __init__.py  config.py  mode.py  piece.py  topic.py
opinionforge/modes/: __init__.py  categories.yaml
opinionforge/modes/profiles/: analytical.yaml  aphoristic.yaml  data_driven.yaml  dialectical.yaml  forensic.yaml  measured.yaml  narrative.yaml  oratorical.yaml  (+4 more)
opinionforge/utils/: __init__.py  fetcher.py  search.py  text.py
tests/: conftest.py  confusability_helpers.py  confusability_regression_set.yaml  test_cli.py  test_config.py  test_confusability.py  test_e2e.py  test_e2e_phase2.py  test_exporters.py  test_exporters_integration.py  test_fetcher.py  test_generator.py  test_image_prompt.py  test_length.py  test_models.py  test_modes.py  test_name_sanitization.py  test_no_impersonation.py  test_pipeline_integration.py  test_preview.py  test_readme_accuracy.py  test_research.py  test_runtime_isolation.py  test_search_clients.py  test_similarity.py  test_stance.py  test_text_utils.py  test_topic.py
